--- a/Jianpu_Wang_Resume.tex
+++ b/Jianpu_Wang_Resume.tex
@@ -94,7 +94,7 @@
       {Engineering Manager}{May 2018 - Present}
       \resumeItemListStart
         \resumeItem{ARP}
-          {ARP is an TeleNav Automotive Reference Product; a full navigation product out of box for Android system. Lead 8 engineers work on it.}
+          {ARP is an TeleNav Automotive Reference Product; a full navigation product out of box for Android system. Lead 8 engineers work on it, define the technical roadmap, and identify key areas to improve.}
         \resumeItem{VIVID}
           {VIVID is an In-Vehicle infotainment system based on Android platform. Lead 6 engineers work on the implementation of system launcher and media application.}
       \resumeItemListEnd
@@ -132,7 +132,7 @@
         \resumeItem{Login}
           {Implemented the login feature by connecting different social login port such as Google, Facebook and Email.}
         \resumeItem{Car Connect}
-          {Developed the library that can send/receive last mile location from the car into your phone app.}
+          {Developed the library that can send/receive last mile location from the car into the phone app.}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -149,7 +149,7 @@
 
 
 %-----------PROJECTS-----------------
-\section{Products}
+\section{Published Products}
   \resumeSubHeadingListStart
     \resumeSubItem{\href{https://play.google.com/store/apps/details?id=com.telenav.app.android.scout_us}{Scout}}
       {A social navigation app used by millions of users and commented by a hundred thousand people.}
